--- a/html/index.html
+++ b/html/index.html
@@ -6,8 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Fimls</title>
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/font.css">
 </head>
 <body>
-    
+
+        <div class="container">
+            <div class="searchFilm">
+                <input type="text" id="nameMovie" placeholder="The movie name" value="Guardians of the Galaxy Vol. 2">
+                <button id="searchButton">Search</button>       
+            </div>    
+
+            <div id="result"></div>
+        </div>
+
+
+    <footer>By DcDev</footer>
+    <script src="/js/index.js"></script>
 </body>
 </html>
