--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 
         <div class="container">
             <div class="searchFilm">
-                <input type="text" id="nameMovie" placeholder="The movie name" value="Guardians of the Galaxy Vol. 2">
+                <input type="text" id="nameMovie" placeholder="The movie name" value="Princess Mononoke">
                 <button id="searchButton">Search</button>       
             </div>    
 
